# blogbot

./: .gitignore  .pre-commit-config.yaml  .sesskey  CLAUDE.md  README.md  SESSION.md  TODO.md  docker-compose.yml  prompt_plan.md  pyproject.toml  spec.md
app/: __init__.py  database.py  main.py  models.py
scripts/: commit.sh  resume-session.sh  setup-dev.sh
tests/: test_database.py  test_models.py
